--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>me.migel</groupId>
     <artifactId>yamler</artifactId>
     <version>1.0</version>
-    <packaging>pom</packaging>
+    <packaging>jar</packaging>
 
     <name>Yamler</name>
 
