--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
     <distributionManagement>
         <repository>
             <id>github</id>
-            <name>GitHub OWNER Apache Maven Packages</name>
+            <name>GitHub Migel077 Apache Maven Packages</name>
             <url>https://maven.pkg.github.com/Migel077/Yamler</url>
         </repository>
     </distributionManagement>
