--- a/.github/workflows/maven-publish.yml
+++ b/.github/workflows/maven-publish.yml
@@ -21,6 +21,11 @@ jobs:
       - name: Build with Maven
         run: mvn -B clean package
 
+      - name: Debug env
+        run: |
+          echo "GITHUB_ACTOR=$GITHUB_ACTOR"
+          echo "GITHUB_TOKEN=$GITHUB_TOKEN"
+
       - name: Publish to GitHub Packages
         run: mvn -B deploy --settings .github/settings.xml
         env:
